Add `aarch64` cross compilation profile

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <developers>
     <developer>
       <name>Kasimir Torri</name>
+      <email>ksmr@ksmr.net</email>
     </developer>
   </developers>
 
@@ -24,6 +25,12 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
+
+  <scm>
+    <connection>scm:git:git://github.com/ksmr/sched.git</connection>
+    <developerConnection>scm:git:ssh://github.com/ksmr/sched.git</developerConnection>
+    <url>https://github.com/ksmr/sched/tree/master</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,61 +47,180 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-	<artifactId>maven-antrun-plugin</artifactId>
-	<version>1.7</version>
-	<executions>
-	  <execution>
-	    <phase>process-classes</phase>
-	    <configuration>
-	      <target
-		  name="jni"
-		  description="Compile the native code">
-		<exec executable="make" ></exec>
-	      </target>
-	    </configuration>
-	    <goals>
-	      <goal>run</goal>
-	    </goals>
-	  </execution>
-	</executions>
-      </plugin>
-    </plugins>
-  </build>
+  <profiles>
+    <profile>
+      <id>linux</id>
+      <activation>
+        <os>
+          <family>linux</family>
+        </os>
+      </activation>
+      <build>
+        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+          <plugins>
+            <plugin>
+              <artifactId>maven-clean-plugin</artifactId>
+              <version>3.1.0</version>
+            </plugin>
+            <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+            <plugin>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>3.0.2</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.0</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.22.1</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>3.0.2</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-install-plugin</artifactId>
+              <version>2.5.2</version>
+            </plugin>
+            <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.2</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- <plugin> -->
+          <!--   <groupId>org.apache.maven.plugins</groupId> -->
+          <!--   <artifactId>maven-gpg-plugin</artifactId> -->
+          <!--   <version>1.5</version> -->
+          <!--   <executions> -->
+          <!--     <execution> -->
+          <!--       <id>sign-artifacts</id> -->
+          <!--       <phase>verify</phase> -->
+          <!--       <goals> -->
+          <!--         <goal>sign</goal> -->
+          <!--       </goals> -->
+          <!--     </execution> -->
+          <!--   </executions> -->
+          <!-- </plugin> -->
+        </plugins>
+      </build>
+    </profile>
 
+    <profile>
+      <id>amd64</id>
+      <activation>
+        <os>
+          <family>linux</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+	    <artifactId>maven-antrun-plugin</artifactId>
+	    <version>1.7</version>
+	    <executions>
+	      <execution>
+	        <phase>process-classes</phase>
+	        <configuration>
+	          <target
+		      name="jni"
+		      description="Compile the native code">
+		    <exec executable="make">
+                      <arg value="CC=gcc" />
+                      <arg value="ARCH=amd64" />
+                    </exec>
+                  </target>
+	        </configuration>
+	        <goals>
+	          <goal>run</goal>
+	        </goals>
+	      </execution>
+	    </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>3.0.0-M1</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>aarch64-cc</id>
+      <build>
+        <plugins>
+          <plugin>
+	    <artifactId>maven-antrun-plugin</artifactId>
+	    <version>1.7</version>
+	    <executions>
+	      <execution>
+                <id>amd64-make</id>
+	        <phase>process-classes</phase>
+	        <configuration>
+	          <target
+		      name="jni"
+		      description="Compile the native code">
+		    <exec executable="make">
+                      <arg value="CC=gcc" />
+                      <arg value="ARCH=amd64" />
+                    </exec>
+                  </target>
+	        </configuration>
+	        <goals>
+	          <goal>run</goal>
+	        </goals>
+	      </execution>
+	      <execution>
+                <id>aarch64-make</id>
+	        <phase>process-classes</phase>
+	        <configuration>
+	          <target
+		      name="jni"
+		      description="Compile the native code">
+		    <exec executable="make">
+                      <arg value="CC=aarch64-linux-gnu-gcc" />
+                      <arg value="ARCH=aarch64" />
+                    </exec>
+                  </target>
+	        </configuration>
+	        <goals>
+	          <goal>run</goal>
+	        </goals>
+	      </execution>
+	    </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
