--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.ksmr</groupId>
@@ -28,9 +27,21 @@
 
   <scm>
     <connection>scm:git:git://github.com/ksmr/sched.git</connection>
-    <developerConnection>scm:git:ssh://github.com/ksmr/sched.git</developerConnection>
+    <developerConnection>scm:git:ssh://git@github.com/ksmr/sched.git</developerConnection>
     <url>https://github.com/ksmr/sched/tree/master</url>
+    <tag>HEAD</tag>
   </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -47,48 +58,56 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+      <plugins>
+        <plugin>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+        <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>2.5.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>3.0.0-M1</version>
+          <configuration>
+            <pushChanges>false</pushChanges>
+            <useReleaseProfile>false</useReleaseProfile>
+            <releaseProfiles>release</releaseProfiles>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
   <profiles>
     <profile>
-      <id>linux</id>
-      <activation>
-        <os>
-          <family>linux</family>
-        </os>
-      </activation>
+      <id>release</id>
       <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-          <plugins>
-            <plugin>
-              <artifactId>maven-clean-plugin</artifactId>
-              <version>3.1.0</version>
-            </plugin>
-            <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-            <plugin>
-              <artifactId>maven-resources-plugin</artifactId>
-              <version>3.0.2</version>
-            </plugin>
-            <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.8.0</version>
-            </plugin>
-            <plugin>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.22.1</version>
-            </plugin>
-            <plugin>
-              <artifactId>maven-jar-plugin</artifactId>
-              <version>3.0.2</version>
-            </plugin>
-            <plugin>
-              <artifactId>maven-install-plugin</artifactId>
-              <version>2.5.2</version>
-            </plugin>
-            <plugin>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.8.2</version>
-            </plugin>
-          </plugins>
-        </pluginManagement>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -116,20 +135,20 @@
               </execution>
             </executions>
           </plugin>
-          <!-- <plugin> -->
-          <!--   <groupId>org.apache.maven.plugins</groupId> -->
-          <!--   <artifactId>maven-gpg-plugin</artifactId> -->
-          <!--   <version>1.5</version> -->
-          <!--   <executions> -->
-          <!--     <execution> -->
-          <!--       <id>sign-artifacts</id> -->
-          <!--       <phase>verify</phase> -->
-          <!--       <goals> -->
-          <!--         <goal>sign</goal> -->
-          <!--       </goals> -->
-          <!--     </execution> -->
-          <!--   </executions> -->
-          <!-- </plugin> -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
@@ -151,9 +170,7 @@
 	      <execution>
 	        <phase>process-classes</phase>
 	        <configuration>
-	          <target
-		      name="jni"
-		      description="Compile the native code">
+	          <target name="jni" description="Compile the native code">
 		    <exec executable="make">
                       <arg value="CC=gcc" />
                       <arg value="ARCH=amd64" />
@@ -165,11 +182,6 @@
 	        </goals>
 	      </execution>
 	    </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
-            <version>3.0.0-M1</version>
           </plugin>
         </plugins>
       </build>
@@ -187,9 +199,7 @@
                 <id>amd64-make</id>
 	        <phase>process-classes</phase>
 	        <configuration>
-	          <target
-		      name="jni"
-		      description="Compile the native code">
+	          <target name="jni" description="Compile the native code">
 		    <exec executable="make">
                       <arg value="CC=gcc" />
                       <arg value="ARCH=amd64" />
@@ -204,9 +214,7 @@
                 <id>aarch64-make</id>
 	        <phase>process-classes</phase>
 	        <configuration>
-	          <target
-		      name="jni"
-		      description="Compile the native code">
+	          <target name="jni" description="Compile the native code">
 		    <exec executable="make">
                       <arg value="CC=aarch64-linux-gnu-gcc" />
                       <arg value="ARCH=aarch64" />
